--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class ="grid">
         <div class ="rows ">
-            <div  onclick ="buttonClicked(this.id)" id = "one"class ="cols border"> x</div>
+            <div  onclick ="buttonClicked(this.id)" id = "one"class ="cols border"></div>
             <div  onclick ="buttonClicked(this.id)" id = "two" class ="cols border"></div>
             <div  onclick ="buttonClicked(this.id)" id = "three"class ="cols border"></div>
         </div>
